--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@
 
 # To explicitly override the above, define any exceptions here; e.g.:
 # !my_customized_scatter_file.sct
+
+# gitignore for other parts of the project
+*.pass
+*.out
