--- a/project.yml
+++ b/project.yml
@@ -67,6 +67,10 @@
     uint32:   UINT32
     int8:     INT8
     bool:     UINT8
+  :includes:
+    - "helper/unity_helper.h"
+  :unity_helper_path:
+    - "test/helper/unity_helper.h"
 
 # Add -gcov to the plugins list to make sure of the gcov plugin
 # You will need to have gcov and gcovr both installed to make it work.
