--- a/project.yml
+++ b/project.yml
@@ -33,6 +33,7 @@
   :test:
     - +:test/**
     - -:test/support
+    - test/fakes
   :source:
     - src/**
     - C:/Keil_v5/ARM/PACK/Keil/STM32F4xx_DFP/2.14.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include
