add fake headers for rcc. all tests pass

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.c": "c",
         "string.h": "c",
-        "unity_helper.h": "c"
+        "unity_helper.h": "c",
+        "stm32f4xx_hal_rcc.h": "c"
     }
 }
