--- a/project.yml
+++ b/project.yml
@@ -32,14 +32,15 @@
 :paths:
   :test:
     - +:test/**
-    - -:test/support
-    - test/fakes
-  :source:
-    - src/**
+  :include:
     - C:/Keil_v5/ARM/PACK/Keil/STM32F4xx_DFP/2.14.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include
     - C:/Keil_v5/ARM/PACK/ARM/CMSIS/5.3.0/CMSIS/Include
+  :source:
+    - src/**
   :support:
+    - test/fakes
     - test/support
+    - test/helper
   :libraries: []
 
 :defines:
